# stm32f103-vga-rs

./: Cargo.toml  LICENSE  README.md  build.rs  flash.sh  link-custom.x  loader.gdb  openocd.cfg
.cargo/: config
doc/glitch/: glitch.md
src/: font8x16.rs  keyboard.rs  main.rs  stm32.rs  vga.rs  vgaDraw.S  vga_draw.S  vga_draw.rs
src/asm/: vga_draw.S
src/vga/: display.rs  draw.rs  mod.rs  render.rs
