[package]
name = "stm32f103-vga-rs"
version = "0.1.0"
authors = ["Andrey Belykh"]
edition = "2021"

[features]
board2 = []
# default = ["board2"]

[dependencies]
arraydeque = { version = "0.4.5", default-features = false }
cortex-m = "0.7.1"
cortex-m-rt = "0.7.0"
cortex-m-rtic = "0.5.5"
panic-halt = "0.2.0"
# panic-semihosting = "0.5.3"
embedded-graphics = "0.6.2"
pc-keyboard = "0.5.1"
stm32f1 = { version = "0.13.0", features = ["rt", "stm32f103"] }

[build-dependencies]
cc = "1.0"

[profile.release]
lto = true
panic = "abort"

# Setting these prevents Cargo from trying to test or bench the crate
[stm32f103-vga-rs]
test = false
bench = false
